<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="7dp"
    android:layout_marginLeft="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reachus"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reachus2"
            android:layout_marginTop="7dp"
            android:textSize="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callus"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callus2"
            android:textSize="25dp"
            android:layout_marginTop="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailus"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailus2"
            android:textSize="25dp"
            android:layout_marginTop="7dp"/>
    </LinearLayout>

</RelativeLayout>